--- a/risque/pom.xml
+++ b/risque/pom.xml
@@ -2,7 +2,15 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>risque</groupId>
   <artifactId>risque</artifactId>
-  <version>4.0.0</version>
+  <version>1.0</version>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
