--- a/risque/pom.xml
+++ b/risque/pom.xml
@@ -11,6 +11,8 @@
     </dependency>
   </dependencies>
   <build>
+    <sourceDirectory>src/main</sourceDirectory>
+    <testSourceDirectory>src/test</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
