--- a/risque/pom.xml
+++ b/risque/pom.xml
@@ -21,6 +21,14 @@
           <release>15</release>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <testSourceDirectory>src/test</testSourceDirectory>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
