--- a/risque/pom.xml
+++ b/risque/pom.xml
@@ -26,7 +26,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
-          <testSourceDirectory>src/test</testSourceDirectory>
+          <testSourceDirectory>${project.basedir}/src/test</testSourceDirectory>
         </configuration>
       </plugin>
     </plugins>
