--- a/.github/workflows/junittesting.yml
+++ b/.github/workflows/junittesting.yml
@@ -24,4 +24,4 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Run tests with Maven
-      run: mvn -B test --file risque/pom.xml
+      run: mvn -B test --file pom.xml
