--- a/risque/pom.xml
+++ b/risque/pom.xml
@@ -11,8 +11,8 @@
     </dependency>
   </dependencies>
   <build>
-    <sourceDirectory>src/main</sourceDirectory>
-    <testSourceDirectory>src/test</testSourceDirectory>
+    <sourceDirectory>${project.basedir}/src/main</sourceDirectory>
+    <testSourceDirectory>${project.basedir}/src/test</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
