--- a/risque/pom.xml
+++ b/risque/pom.xml
@@ -11,8 +11,8 @@
     </dependency>
   </dependencies>
   <build>
-    <sourceDirectory>${project.basedir}/src/main</sourceDirectory>
-    <testSourceDirectory>${project.basedir}/src/test</testSourceDirectory>
+    <sourceDirectory>${project.basedir}/src</sourceDirectory>
+    <testSourceDirectory>${project.basedir}/src</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -26,7 +26,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
-          <testSourceDirectory>${project.basedir}/src/test</testSourceDirectory>
+          <testSourceDirectory>${project.basedir}/src</testSourceDirectory>
         </configuration>
       </plugin>
     </plugins>
