--- a/.github/workflows/junittesting.yml
+++ b/.github/workflows/junittesting.yml
@@ -6,8 +6,6 @@ name: Java CI JUnit Testing with Maven
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,5 +21,7 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
+    - name: Generate Javadoc with Maven
+      run: mvn site
     - name: Run tests with Maven
       run: mvn -B test --file risque/pom.xml
